carousel close zoom view btn z-index fix, mobile contact author on service-detail component

--- a/src/app/modules/services/services-detail/services-detail.component.scss
+++ b/src/app/modules/services/services-detail/services-detail.component.scss
@@ -25,9 +25,6 @@
   width: 100vw;
   height: 5%;
   text-align: center;
-  a {
-    color: white;
-  }
   > * {
     display: flex;
     flex-direction: column;
@@ -37,6 +34,12 @@
     }
     &.phone-col {
       background: $primary-color;
+    }
+    a {
+      color: white;
+      i {
+        margin-right: 5px;
+      }
     }
   }
 }
