--- a/src/app/shared/components/detail-view-only/carousel/carousel.component.scss
+++ b/src/app/shared/components/detail-view-only/carousel/carousel.component.scss
@@ -56,6 +56,7 @@
       background: transparent;
     }
     .close-btn {
+      z-index: 11;
       position: fixed;
       top: 3vh;
       left: 3vh;
